# DAC-SR

./: .gitignore  Dockerfile  SCHEMA.md  pyproject.toml
backtest/: runner.py
config/v1/: weights.yaml
src/: models.py
src/datasource/: base.py  market.py  onchain.py
src/engine/: builder.py  scoring.py
src/indicators/: liquidity.py  volatility.py
src/io/: api.py  config.py
tests/: test_scoring.py
